Fixes to scrollbars

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,13 +13,14 @@ html{
 	background: $gray6; 
 }
 body{
+	color: $gray6;
 	background-color: $mainBGColor;
 	position: absolute;
 	left: 50%;
-	top: 0;
+	top: 50%;
 	display: block; 
 	margin-left: -$appW/2;
-	// margin-top: -$appH/2;
+	margin-top: -$appH/2;
 	z-index: 2;
 	@include size($appW, $appH);
 	@include box-shadow(0 0 5px rgba(0,0,0,0.2));
@@ -42,13 +43,16 @@ body{
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     -moz-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+::-webkit-scrollbar { 
+    display: none; 
+}
 
 ////////////////////////////////////////////////////////////////////
 // Reusable UI
 ////////////////////////////////////////////////////////////////////
 .mainView{
  	position: absolute;
- 	width: 100%;
+ 	width: calc(100% + #{$mainMargins}); // remove the scrollbars
  	height: 100%;
  	overflow-y: scroll;
  	-webkit-overflow-scrolling: touch;
@@ -56,12 +60,25 @@ body{
  	z-index: 1;
  	.mainViewContent{
  		padding: $mainMargins;
- 		background: $mainBGColor;
+ 		padding-right: $mainMargins * 2;
+ 		background: transparent;
  	} 
  	@include box-sizing(border-box);
 
  	&.withNavBarView{
  		padding-top: $NavBarViewHeightExpanded;
+ 	}
+
+ 	@include single-transition(all, 0.3s, ease-in-out);
+	@include transform(scale(0.8));
+	opacity: 0;
+
+ 	&.in{
+		@include transform(scale(1));
+		opacity: 1;
+		.mainViewContent{
+			background: $mainBGColor;
+		}
  	}
 }
 
