--- a/sass/ui/PaletteView.scss
+++ b/sass/ui/PaletteView.scss
@@ -20,6 +20,7 @@
 		margin-left: 5px;
 		margin-top: 7px;
 		display: inline-block;
+		@include border-radius(50%);
 		@include sq(20px);
 		position: relative;
 		border: 4px solid rgba(0,0,0,0.1);
